# contri_share

./: .editorconfig  .gitignore  ARCHITECTURE.md  BOILERPLATE_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  QUICKSTART.md  README.md  context.md  docker-compose.yml  main.py  pyproject.toml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  setup.cfg
backend/app/: __init__.py  exceptions.py
backend/app/api/v1/endpoints/: __init__.py  expenses.py  groups.py  health.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  base.py  expense.py  expense_sharers.py  group.py  group_members.py  settlements.py  user.py
backend/app/schemas/: expense.py  group.py  user.py
backend/app/services/: debt_service.py  expense_service.py  group_service.py  user_service.py
backend/tests/: conftest.py  test_health.py  test_users.py
frontend/: .env.example  .eslintrc.json  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/public/: manifest.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: HomePage.jsx  Layout.jsx  Navbar.jsx
frontend/src/features/dashboard/: Dashboard.jsx
frontend/src/features/expenses/: ExpenseForm.jsx  ExpenseList.jsx
frontend/src/features/groups/: GroupList.jsx
frontend/src/hooks/: useApi.js
frontend/src/services/: api.js
